<resources>
    <string name="app_name">Safety Monitoring App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logs">Logs</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="verification_note">Note:\nDo not close this window while in verification process. If you have problem in verifying, create a new account with different username.</string>
    <string name="reset_password_note">After a successful reset of your account, please check your email for verification code.</string>
    <string name="confirm_reset_password_note">Confirmation code has been sent to your registered email. Please enter the confirmation code and a new strong password.</string>
    <string name="power_up_check_the_led"><![CDATA[Power Up & Check the LED]]></string>
    <string name="connect_to_the_device">Connect to the Device</string>
    <string name="timestamp">Timestamp</string>
    <string name="camera_details">Device Details</string>
    <string name="person">Person</string>
    <string name="detected_ppe">Detected Objects</string>
    <string name="details">Details</string>
    <string name="detection_client">Detection Client</string>
    <string name="view_logs">View logs</string>
    <string name="description_zoom_touch_close">Expanded Image</string>
    <string name="log_details">Log Details</string>
    <string name="camera_name">Camera Name</string>
    <string name="devices">Devices</string>
    <string name="plugin">Plug in the device and wait until the LED blinks red and green.</string>
    <string name="keep_your_phone_close">Tip: Keep your phone close to the device throughout the setup.</string>
    <string name="led_blinking">LED not blinking red and green?\nPress and hold the reset button until the LED blinks red.</string>
    <string name="next">Next</string>
    <string name="device_name">Device Name</string>
    <string name="device_unique_id">Device Unique ID</string>
    <string name="please_provide_a_strong_password">Please provide a strong password</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="fill_out_empty_fields">Fill out empty fields</string>
    <string name="password_reset_success_check_your_email">Password reset success, check your email</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="password_reset_failed">Password reset failed</string>
    <string name="login_not_complete">Login not complete</string>
    <string name="account_reset_successful">Account reset successful</string>
    <string name="failed_to_confirm_password_reset">Failed to confirm password reset</string>
    <string name="account_was_successfully_verified">Account was successfully verified</string>
    <string name="invalid_code">Invalid code</string>
    <string name="username_or_password_incorrect">Username or Password is Incorrect</string>
    <string name="about_safety_monitoring_app">About Safety Monitoring App</string>
    <string name="title_safety_monitoring_app">SAFETY MONITORING APP</string>
    <string name="zmci">ZMCI</string>
    <string name="about_content_1">This mobile application is interconnected to the PPE detection system wherein it can detect the utilization and absence of hard hats, glasses, vest, gloves, and boots.</string>
    <string name="about_content_2">It has features to notify and let you monitor an area in real-time by setting up the device through this mobile application.</string>
    <string name="about_content_3">You can also generate report from the detections of the monitoring device.</string>
    <string name="the_dev_team">The Dev Team</string>
    <string name="zeus_james_s_baltazar">Zeus James S. Baltazar</string>
    <string name="intelligent_systems">Intelligent Systems</string>
    <string name="martin_lorenzo_s_basbacio">Martin Lorenzo S. Basbacio</string>
    <string name="clarence_gail_a_larrosa">Clarence Gail A. Larrosa</string>
    <string name="ian_gabriel_c_marquez">Ian Gabriel C. Marquez</string>
    <string name="systems_administration">Systems Administration</string>
    <string name="privacy">Privacy Policy</string>
    <string name="disclaimer1">All effort is taken to ensure that all information collected is informative and accurate as possible. Information collected from detection is secured and the monitoring system will give a copy of results to the safety officers for future reference.</string>
    <string name="scope_and_purposes_1">This data privacy policy describe the monitoring device and explains the safeguards we have put in place to protect personal data of any individuals who may be captured by the monitoring device.</string>
    <string name="scope_and_purposes_2">The collection, disclosure, use, storage, and other processing of personal data by the monitoring device is for references for verifying any violation/s of the workers and managing a safe environment for the workers, including without limitation:</string>
    <string name="scope_and_purposes_3">\t- preventing removal of PPE\n\t- assisting safety officers to monitor non-compliance\n\t- for dispute-resolution purposes where images might be able to settle that dispute.</string>
    <string name="scope_and_purposes_4">The monitoring device is not used for purposed other than those described above.</string>
    <string name="monitoring_device_1">The monitoring device operating time during working hours.</string>
    <string name="monitoring_device_2">The monitoring device captures image of any movement and person that is spotted in the area under surveillance.</string>
    <string name="monitoring_device_3">The monitoring device do not conduct sound recording.</string>
    <string name="location_of_monitoring_device_1">The placement of monitoring device shall not intrude the privacy of individual and the task of the workers.</string>
    <string name="location_of_monitoring_device_2">Upon installation, the device is tested to ensure that only the working area are monitored.</string>
    <string name="notices_1">The workers shall be notified of monitoring device operations through signage installed near the areas monitored.</string>
    <string name="authorized_personnel_1">Images captured by the Company is accessible only to the Safety and Security Team.</string>
    <string name="authorized_personnel_2">The personnel engaged to ensure the safety of the premises and/or the operation and maintenance of the monitoring device may have access to images only where strictly required to accomplish their task, and are prohibited from using the images for any other purposes.</string>
    <string name="security_measures_1">Access to the images captured by the monitoring device is restricted and carefully controlled. </string>
    <string name="disclaimer">Disclaimer</string>
    <string name="scope_and_purposes">Scope and Purposes</string>
    <string name="monitoring_device_description">Monitoring Device Description</string>
    <string name="location_of_monitoring_device">Location of Monitoring Device</string>
    <string name="notices">Notices</string>
    <string name="authorized_personnel">Authorized Personnel</string>
    <string name="security_measures">Security Measures</string>
    <string name="by_clicking_sign_up_you_agree_to_our_privacy_statement">By clicking Sign Up, you agree to our</string>
    <string name="introduction">Introduction</string>
    <string name="definitions">Definitions</string>
    <string name="definitions_1">\t- \"Company\" refers to ZMCI.</string>
    <string name="definitions_2">\t- \"Employer\" refers to the organization, company, or entity that employs you and has subscribed to the company\'s services.</string>
    <string name="contact_information">Contact Information</string>
    <string name="privacy_introduction_1">We are committed to protecting the privacy and personal information of construction workers who use our mobile application and utilize our device that detects personal protective equipment (PPE). This privacy policy explains how we collect, use, and safeguard the personal information in accordance with applicable privacy laws and regulations.</string>
    <string name="personal_information_collection">Personal Information Collection</string>
    <string name="personal_information_collection_1">We may collect personal information from construction workers, which may include:</string>
    <string name="personal_information_collection_2">\t- Images captured by the device.</string>
    <string name="personal_information_collection_3">\t- Personal protective equipment usage data and detection details.</string>
    <string name="purpose_of_data_collection">Purpose of Data Collection</string>
    <string name="purpose_of_data_collection_1">The personal information collected is used for the following purposes:</string>
    <string name="purpose_of_data_collection_2">\t- To detect compliance with personal protective equipment (PPE) requirements.</string>
    <string name="purpose_of_data_collection_3">\t- To provide relevant reports and analytics to the subscribing organization (construction company).</string>
    <string name="responsibility_of_the_organization">Responsibility of the Organization</string>
    <string name="responsibility_of_the_organization_1">The organization (construction company) subscribing to our services is responsible for ensuring the privacy and data protection of its construction workers in relation to the use of our services. This includes obtaining necessary consents, providing appropriate notice, and complying with applicable privacy laws and regulations.</string>
    <string name="privacy_security_measures_1">We implement appropriate technical and organizational measures to protect the personal information of construction workers from unauthorized access, use, or disclosure. These measures include encryption, access controls, and data retention policies.</string>
    <string name="third_party_service_providers">Third-Party Service Providers</string>
    <string name="third_party_service_providers_1">We may engage in providing services for the storage, processing, or analysis of the information collected. We ensure that these services adhere to adequate security and privacy standards to protect the personal information and comply with applicable privacy laws and regulations.</string>
    <string name="data_retention">Data Retention</string>
    <string name="data_retention_1">We retain the personal information of construction workers for as long as necessary to fulfill the purposes outlined in this privacy policy, or as required by law. The subscribing organization is responsible for establishing appropriate data retention policies in compliance with applicable laws and regulations.</string>
    <string name="individual_rights">Individual Rights</string>
    <string name="individual_rights_1">Construction workers may have certain rights regarding their personal information, including the right to access, rectify, restrict processing, and delete their personal information. The subscribing organization is responsible for facilitating the exercise of these rights and handling related inquiries or requests.</string>
    <string name="updates_to_the_privacy_policy">Updates to the Privacy Policy</string>
    <string name="updates_to_the_privacy_policy_1">We may update this privacy policy from time to time to reflect changes in our practices or applicable laws and regulations. We will notify the subscribing organization of any material changes to the privacy policy through appropriate means.</string>
    <string name="privacy_contact_information">If you have any questions, concerns, or inquiries regarding this privacy policy or our privacy practices, please contact us at zmci.company@gmail.com.</string>
</resources>