<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    tools:context=".settings.PrivacyActivity">

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/aboutLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zmci"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/dark_gray"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Privacy Policy"
                    android:textSize="28sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/warm_black"
                    android:textAlignment="center"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/terms_and_conditions" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/privacy_introduction_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information_collection"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/personal_information_collection_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/personal_information_collection_2"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/personal_information_collection_3"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_of_data_collection"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/purpose_of_data_collection_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/purpose_of_data_collection_2"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/purpose_of_data_collection_3"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/responsibility_of_the_organization"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/responsibility_of_the_organization_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security_measures"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/privacy_security_measures_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_party_service_providers"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/third_party_service_providers_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_retention"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/data_retention_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/individual_rights"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/individual_rights_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates_to_the_privacy_policy"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/updates_to_the_privacy_policy_1"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_information"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/warm_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/privacy_contact_information"
                android:textSize="16sp"
                android:textColor="@color/warm_black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="16sp"
                android:textColor="@color/warm_black"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>