<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zmci.safetymonitoringapp.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.zmci.safetymonitoringapp.logs.LogsFragment"
        android:label="@string/logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.zmci.safetymonitoringapp.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>