<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rCameraName"
                android:text="@string/camera_name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/rTimestamp"
                android:text="@string/timestamp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/rViolators"
                android:text="@string/person"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/rViolations"
                android:text="@string/detected_ppe"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/rMenus"
            android:src="@drawable/ic_more"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>