<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_bg"
    tools:context=".home.camera.AddCameraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_up_check_the_led"
                android:gravity="center"
                android:textColor="@color/warm_black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_margin="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keep_your_phone_close"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/proto_led"/>
            <com.kusu.loadingbutton.LoadingButton
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/next"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="@drawable/button_background"
                app:lb_buttonColor="@color/green"
                app:lb_isShadowEnable="true"
                app:lb_isCircular="true"
                app:lb_loaderColor="@color/white"
                app:lb_shadowColor="@color/warm_black"
                app:lb_shadowHeight="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/led_blinking"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>